Bug 218831 - "this contact does not have you in his/her contact list" shown as status in notification
Summary: "this contact does not have you in his/her contact list" shown as status in n...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: WLM Plugin (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 212579 220448 221838 222784 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-15 20:34 UTC by Frederik Himpe
Modified: 2010-06-13 11:37 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Himpe 2009-12-15 20:34:48 UTC
Version:           0.99.80 (using Devel)
Installed from:    Compiled sources

When a contact which does not have me on his contact list, comes online, a notification pop-up is shown stating:
"nickname is now This contact does not have you in his/her contact list"

It should show: "nickname is now online". The fact that I'm not in his contact list, is not relevant to his changing status.
Comment 1 Roman Jarosz 2010-01-10 20:06:23 UTC
I think that the reason shouldn't be overwritten in WlmContact::setOnlineStatus, this is only WLM feature.
Comment 2 Roman Jarosz 2010-01-17 11:18:28 UTC
*** Bug 212579 has been marked as a duplicate of this bug. ***
Comment 3 Mauro 2010-01-20 16:05:01 UTC
Same here, same version.
Comment 4 Roman Jarosz 2010-01-21 21:17:58 UTC
*** Bug 222784 has been marked as a duplicate of this bug. ***
Comment 5 Roman Jarosz 2010-01-21 21:29:32 UTC
SVN commit 1078233 by rjarosz:

Disable special statuses (not on the list, blocked) as it doesn't work correctly and it's not polished.

BUG: 218831


 M  +2 -0      wlmcontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078233
Comment 6 Roman Jarosz 2010-01-21 22:54:30 UTC
*** Bug 221838 has been marked as a duplicate of this bug. ***
Comment 7 Roman Jarosz 2010-01-21 23:07:34 UTC
*** Bug 220448 has been marked as a duplicate of this bug. ***
Comment 8 Dan 2010-01-23 15:22:33 UTC
(In reply to comment #5)
> SVN commit 1078233 by rjarosz:
> 
> Disable special statuses (not on the list, blocked) as it doesn't work
> correctly and it's not polished.

At least for me this bug still happens, even with latest trunk.
Comment 9 Roman Jarosz 2010-01-23 16:28:55 UTC
I've only disabled it in KDE 4.4 branch
Comment 10 Dan 2010-01-23 16:41:03 UTC
(In reply to comment #9)
> I've only disabled it in KDE 4.4 branch

Ok, but I use KDE trunk. Shouldn't I get this change?
Comment 11 Matt Rogers 2010-01-24 05:13:50 UTC
no. trunk != 4.4 branch
Comment 12 Dan 2010-01-24 06:19:04 UTC
(In reply to comment #11)
> no. trunk != 4.4 branch

Ah ok. I thought that if I used the trunk, I always would get the latest enhancements... so when this will go to trunk?
Comment 13 John 2010-06-05 00:52:41 UTC
This bug is still not resolved in kopete-1.0.80 (kde-4.4.80 beta1) Virtually every one of my WLM contacts is showing the same message. If this feature is still not working correctly then could this patch also be applied to the 4.5 branch please? Thanks in advance.
Comment 14 Roman Jarosz 2010-06-13 11:37:04 UTC
SVN commit 1137508 by rjarosz:

Forward port commit 1078233.
CCBUG: 218831



 M  +2 -0      wlmcontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1137508