Disable special statuses (not on the list, blocked) as it doesn't work correctly and it's not polished.

BUG: 218831

svn path=/branches/KDE/4.4/kdenetwork/kopete/; revision=1078233